1999-03-12  Ian Peters  <itp@gnu.org>

	* gnomine.c (lots of stuff): Moved gnomine to use a propbox for
	configuration.

1999-02-13  Ian Peters  <ipeters@acm.org>

	* gnomine.c (verify_ranges): Fixed a coding typo - it was checking the
	xsize twice, instead of the xsize and the ysize in a custom board.

1999-02-06  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnomine.c (about): Fixed a Fundation -> Foundation typo and
	copyright date.

1999-01-26  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnomine.c: Kill file menu.

1999-01-09  Nat Friedman  <nat@nat.org>

	* gnomine.c (main): Install an appbar.  Setup menu hints.  Not
 	quite working.

	Standardized the menus.

1999-01-01  Callum McKenzie <callum@physics.otago.ac.nz>

      * gnomine.c (marks_changed): Call gtk_clock_start.
1999-01-02  Callum McKenzie  <callum@physics.otago.ac.nz>

      * minefield.c: Resizing now works properly. All public functions
      check their arguments.
      * minefield.h: Removed the global variable minesize (it was evil).
      * gnomine.c:   More fixes to get resizing working properly.

1999-01-01  Callum McKenzie <callum@physics.otago.ac.nz>
  
        * gnomine.c (marks_changed): Call gtk_clock_start.

1999-01-01  Callum McKenzie <callum@physics.otago.ac.nz>

	* gnomine.c (marks_changed): Call gtk_clock_start.

1998-11-28  Herbert Valerio Riedel  <hvr@hvrlab.ml.org>

	* gnomine.c: added GPOINTER_TO_INT / GINT_TO_POINTER

Mon Nov 23 15:10:07 EST 1998 Gregory McLean <gregm@comstar.net>

	* minefield.c : GTK_BASIC got removed from gtk, ifdef'd this
	one out as I'm not sure what replaces it.

1998-11-22  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* gnomine.c (main): 'gnome_new_default_client' replaced by
 	'gnome_master_client'.

1998-09-24  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnomine.c: Added shortcut support.

1998-07-25  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* gnomine.desktop: Added Portuguese translation.
